aws-deploy-vpc-with-bastion-for-elb-module.json
{
	"AWSTemplateFormatVersion" : "2010-09-09",
	"Description" : "Builds a simple VPC with one public subnet and one private subnet.",
	"Parameters" : {
		"KeyName" : {
			"Description" : "Name of an existing EC2 KeyPair",
			"Type" : "AWS::EC2::KeyPair::KeyName"
		},
		"EnabledVPCAZ01" : {
			"Description" : "Specify the AZ in which to create the network resources.",
			"Type" : "AWS::EC2::AvailabilityZone::Name"
		},
		"EnabledVPCAZ02" : {
			"Description" : "Specify the AZ in which to create the network resources.",
			"Type" : "AWS::EC2::AvailabilityZone::Name"
		},
		"SSHLocation" : {
			"Description" : "Lockdown SSH location to a specific IP address (defaults to allowing SSH from any host)",
			"Type" : "String",
			"MinLength" : "9",
			"MaxLength" : "18",
			"Default" : "0.0.0.0/0",
			"AllowedPattern" : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription" : "must be a valid CIDR range of the form x.x.x.x/x."
		},
		"PublicSubnet1CIDR" : {
			"Description" : "CIDR block for our public subnet",
			"Type" : "String",
			"Default" : "10.50.1.0/24",
			"AllowedPattern" : "[a-zA-Z0-9]+\\..+"
		},
        "PublicSubnet2CIDR" : {
            "Description" : "CIDR block for our public subnet",
            "Type" : "String",
            "Default" : "10.50.3.0/24",
            "AllowedPattern" : "[a-zA-Z0-9]+\\..+"
        },
		"PrivateSubnet1CIDR" : {
			"Description" : "CIDR block for our private subnet #1",
			"Type" : "String",
			"Default" : "10.50.2.0/24",
			"AllowedPattern" : "[a-zA-Z0-9]+\\..+"
		},
		"VPCCIDR" : {
			"Description" : "CIDR Block for the entire VPC",
			"Type" : "String",
			"Default" : "10.50.0.0/16",
			"AllowedPattern" : "[a-zA-Z0-9]+\\..+"
		}
	},
	"Mappings" : {
		"AWSInstanceType2Arch" : {
			"c1.medium" : {
				"Arch" : "64"
			},
			"c1.xlarge" : {
				"Arch" : "64"
			},
			"cc1.4xlarge" : {
				"Arch" : "64"
			},
			"m1.small" : {
				"Arch" : "64"
			},
			"m1.medium" : {
				"Arch" : "64"
			},
			"m1.large" : {
				"Arch" : "64"
			},
			"m1.xlarge" : {
				"Arch" : "64"
			},
			"m2.2xlarge" : {
				"Arch" : "64"
			},
			"m2.4xlarge" : {
				"Arch" : "64"
			},
			"m2.xlarge" : {
				"Arch" : "64"
			},
			"t1.micro" : {
				"Arch" : "64"
			}
		},
		"AWSRegionArch2AMI": {
            "us-west-1": {
                "64": "ami-91f93ad5"
            },
            "ap-northeast-1": {
                "64": "ami-3e93fe3e"
            },
            "us-east-1": {
                "64": "ami-1df0ac78"
            },
            "eu-central-1": {
                "64": "ami-76828f6b"
            },
            "ap-southeast-1": {
                "64": "ami-34667666"
            },
            "eu-west-1": {
                "64": "ami-2fcbf458"
            },
            "ap-southeast-2": {
                "64": "ami-7bda9041"
            },
            "us-west-2": {
                "64": "ami-8aa746b9"
            },
            "sa-east-1": {
                "64": "ami-02952d6e"
            }
        }		
	},
	"Resources" : {
		"VPC" : {
			"Type" : "AWS::EC2::VPC",
			"Properties" : {
				"CidrBlock" : {
					"Ref" : "VPCCIDR"
				},
				"Tags" : [{
						"Key" : "Application",
						"Value" : {
							"Ref" : "AWS::StackName"
						}
					}, {
						"Key" : "Name",
						"Value" : "CloudFormation VPC"
					}, {
						"Key" : "Network",
						"Value" : "Public"
					}, {
						"Key" : "Department",
						"Value" : "IT"
					}, {
						"Key" : "Project",
						"Value" : "Sysops Training"
					}, {
						"Key" : "Cost Center",
						"Value" : "4000"
					}
				]
			}
		},
		"PublicSubnet1" : {
			"Type" : "AWS::EC2::Subnet",
			"DependsOn" : "VPC",
			"Properties" : {
				"VpcId" : {
					"Ref" : "VPC"
				},
				"CidrBlock" : {
					"Ref" : "PublicSubnet1CIDR"
				},
				"AvailabilityZone" : {
					"Ref" : "EnabledVPCAZ01"
				},
				"Tags" : [{
						"Key" : "Application",
						"Value" : {
							"Ref" : "AWS::StackName"
						}
					}, {
						"Key" : "Name",
						"Value" : "Public Subnet #1 - CF"
					}, {
						"Key" : "Network",
						"Value" : "Public"
					}, {
						"Key" : "Role",
						"Value" : "ELB 1 Subnet"
					}, {
						"Key" : "Department",
						"Value" : "IT"
					}, {
						"Key" : "Project",
						"Value" : "Sys Ops Training"
					}, {
						"Key" : "Cost Center",
						"Value" : "4000"
					}
				]
			}
		},
        "PublicSubnet2" : {
            "Type" : "AWS::EC2::Subnet",
            "DependsOn" : "VPC",
            "Properties" : {
                "VpcId" : {
                    "Ref" : "VPC"
                },
                "CidrBlock" : {
                    "Ref" : "PublicSubnet2CIDR"
                },
                "AvailabilityZone" : {
                    "Ref" : "EnabledVPCAZ02"
                },
                "Tags" : [{
                        "Key" : "Application",
                        "Value" : {
                            "Ref" : "AWS::StackName"
                        }
                    }, {
                        "Key" : "Name",
                        "Value" : "Public Subnet #2 - CF"
                    }, {
                        "Key" : "Network",
                        "Value" : "Public"
                    }, {
                        "Key" : "Role",
                        "Value" : "ELB 1 Subnet"
                    }, {
                        "Key" : "Department",
                        "Value" : "IT"
                    }, {
                        "Key" : "Project",
                        "Value" : "Sys Ops Training"
                    }, {
                        "Key" : "Cost Center",
                        "Value" : "4000"
                    }
                ]
            }
        },
		"PrivateSubnet1" : {
			"Type" : "AWS::EC2::Subnet",
			"DependsOn" : "VPC",
			"Properties" : {
				"VpcId" : {
					"Ref" : "VPC"
				},
				"CidrBlock" : {
					"Ref" : "PrivateSubnet1CIDR"
				},
				"AvailabilityZone" : {
					"Ref" : "EnabledVPCAZ01"
				},
				"Tags" : [{
						"Key" : "Application",
						"Value" : {
							"Ref" : "AWS::StackName"
						}
					}, {
						"Key" : "Name",
						"Value" : "Private Subnet - CF"
					}, {
						"Key" : "Network",
						"Value" : "Private"
					}, {
						"Key" : "Role",
						"Value" : "Application-Web Subnet"
					}, {
						"Key" : "Department",
						"Value" : "IT"
					}, {
						"Key" : "Project",
						"Value" : "Sys Ops Training"
					}, {
						"Key" : "Cost Center",
						"Value" : "4000"
					}
				]
			}
		},
		"InternetGateway" : {
			"Type" : "AWS::EC2::InternetGateway",
			"Properties" : {
				"Tags" : [{
						"Key" : "Application",
						"Value" : {
							"Ref" : "AWS::StackName"
						}
					}, {
						"Key" : "Name",
						"Value" : "Internet Gateway - CF"
					}, {
						"Key" : "Network",
						"Value" : "Public"
					}, {
						"Key" : "Department",
						"Value" : "IT"
					}, {
						"Key" : "Project",
						"Value" : "Sys Ops Training"
					}, {
						"Key" : "Cost Center",
						"Value" : "4000"
					}
				]
			}
		},
		"AttachGateway" : {
			"Type" : "AWS::EC2::VPCGatewayAttachment",
			"DependsOn" : ["InternetGateway", "VPC"],
			"Properties" : {
				"VpcId" : {
					"Ref" : "VPC"
				},
				"InternetGatewayId" : {
					"Ref" : "InternetGateway"
				}
			}
		},
		"PublicRouteTable" : {
			"Type" : "AWS::EC2::RouteTable",
			"DependsOn" : "VPC",
			"Properties" : {
				"VpcId" : {
					"Ref" : "VPC"
				},
				"Tags" : [{
						"Key" : "Network",
						"Value" : "Public"
					}, {
						"Key" : "Name",
						"Value" : "Public Route Table - CF"
					}, {
						"Key" : "Department",
						"Value" : "IT"
					}, {
						"Key" : "Project",
						"Value" : "Sys Ops Training"
					}, {
						"Key" : "Cost Center",
						"Value" : "4000"
					}
				]
			}
		},
		"PublicRoute" : {
			"Type" : "AWS::EC2::Route",
			"DependsOn" : "AttachGateway",
			"Properties" : {
				"RouteTableId" : {
					"Ref" : "PublicRouteTable"
				},
				"DestinationCidrBlock" : "0.0.0.0/0",
				"GatewayId" : {
					"Ref" : "InternetGateway"
				}
			}
		},
		"PublicSubnet1RouteTableAssociation" : {
			"Type" : "AWS::EC2::SubnetRouteTableAssociation",
			"DependsOn" : "PublicRouteTable",
			"Properties" : {
				"SubnetId" : {
					"Ref" : "PublicSubnet1"
				},
				"RouteTableId" : {
					"Ref" : "PublicRouteTable"
				}
			}
		},
		"PrivateRouteTable" : {
			"Type" : "AWS::EC2::RouteTable",
			"DependsOn" : "VPC",
			"Properties" : {
				"VpcId" : {
					"Ref" : "VPC"
				},
				"Tags" : [{
						"Key" : "Network",
						"Value" : "AZ1 Private"
					}, {
						"Key" : "Name",
						"Value" : "Private Route Table - CF"
					}, {
						"Key" : "Department",
						"Value" : "IT"
					}, {
						"Key" : "Project",
						"Value" : "Sys Ops Training"
					}, {
						"Key" : "Cost Center",
						"Value" : "4000"
					}
				]
			}
		},
		"PrivateRouteAZ1" : {
			"Type" : "AWS::EC2::Route",
			"DependsOn" : ["PrivateRouteTable", "Bastion"],
			"Properties" : {
				"RouteTableId" : {
					"Ref" : "PrivateRouteTable"
				},
				"DestinationCidrBlock" : "0.0.0.0/0",
				"InstanceId" : {
					"Ref" : "Bastion"
				}
			}
		},
		"PrivateSubnet1RouteTableAssociation" : {
			"Type" : "AWS::EC2::SubnetRouteTableAssociation",
			"DependsOn" : "PrivateRouteTable",
			"Properties" : {
				"SubnetId" : {
					"Ref" : "PrivateSubnet1"
				},
				"RouteTableId" : {
					"Ref" : "PrivateRouteTable"
				}
			}
		},
		"Bastion" : {
			"Type" : "AWS::EC2::Instance",
			"DependsOn" : ["PublicSubnet1", "VPC"],
			"Properties" : {
				"ImageId" : {
					"Fn::FindInMap" : ["AWSRegionArch2AMI", {
							"Ref" : "AWS::Region"
						}, {
							"Fn::FindInMap" : ["AWSInstanceType2Arch", "m1.small", "Arch"]
						}
					]
				},
				"InstanceType" : "m1.small",
				"NetworkInterfaces" : [{
						"DeviceIndex" : "0",
						"AssociatePublicIpAddress" : "true",
						"SubnetId" : {
							"Ref" : "PublicSubnet1"
						},
						"GroupSet" : [{
								"Ref" : "NATSecurityGroup"
							}
						]
					}
				],
				"UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "<powershell>",
                                "iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1'))\n",
                                "cmd /c SET PATH=%PATH%`;%ALLUSERSPROFILE%\\chocolatey\\bin\n",
                                "choco install awscli -y;choco install curl -y;choco install python -y\n",
                                "[Environment]::SetEnvironmentVariable('path', $env:path+';C:\\Python34\\','MACHINE');\n",
                                "[Environment]::SetEnvironmentVariable('path', $env:path+';C:\\Program Files\\Amazon\\AWSCLI\\','MACHINE');\n",
                                "$localInstanceAvailabilityZone = (invoke-webrequest 'http://169.254.169.254/latest/meta-data/placement/availability-zone').content;\n",
                                "$localRegion = $localInstanceAvailabilityZone.substring(0,$localInstanceAvailabilityZone.length-1);\n",
                                "new-item -type directory C:\\users\\administrator\\;\n",
                                "new-item -type directory C:\\users\\administrator\\.aws\\;\n",
                                {
                                    "Fn::Join": [
                                        "",
                                        [
                                            "Set-content 'C:\\users\\administrator\\.aws\\config' $(\"[default]`r`noutput = text`r`naws_access_key_id = ",
                                            {
                                                "Ref": "myaccesskey"
                                            },
                                            "`naws_secret_access_key = ",
                                            {
                                                "Fn::GetAtt": [
                                                    "myaccesskey",
                                                    "SecretAccessKey"
                                                ]
                                            },
                                            "`r`nregion =$localregion\");\n"
                                        ]
                                    ]
                                },
                                "New-Item -Path C:\\aws\\ -ItemType container;Invoke-WebRequest https://raw.githubusercontent.com/Sam-Martin/aws-training/master/lab9files/UserData.txt -outfile C:\\AWS\\UserData.txt;\n",
                                "</powershell>"
                            ]
                        ]
                    }
                },
				"Tags" : [{
						"Key" : "Name",
						"Value" : "Bastion"
					}, {
						"Key" : "Department",
						"Value" : "IT"
					}, {
						"Key" : "Project",
						"Value" : "Sys Ops Training"
					}, {
						"Key" : "Cost Center",
						"Value" : "4000"
					}
				],
				"KeyName" : {
					"Ref" : "KeyName"
				},
				"SourceDestCheck" : "false"
			}
		},				
		"NATSecurityGroup" : {
			"Type" : "AWS::EC2::SecurityGroup",
			"Properties" : {
				"GroupDescription" : "Web Traffic for ELBs & Enables RDP and HTTP Access",
				"VpcId" : {
					"Ref" : "VPC"
				},
				"SecurityGroupIngress" : [{
						"IpProtocol" : "-1",
						"FromPort" : "1",
						"ToPort" : "65535",
						"CidrIp" : {
							"Ref" : "PrivateSubnet1CIDR"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "3389",
						"ToPort": "3389",
						"CidrIp": "0.0.0.0/0"
					
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"CidrIp": "0.0.0.0/0"
					
					}
				]
			}
		},
		"myuser": {
            "Type": "AWS::IAM::User",
            "Properties": {
                "Path": "/",
                "Policies": [
                    {
                        "PolicyName": "AdminAccess",
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "*"
                                    ],
                                    "Resource": [
                                        "*"
                                    ]
                                }
                            ]
                        }
                    }
                ]
            }
        },
	 	"myaccesskey": {
            "Type": "AWS::IAM::AccessKey",
            "Properties": {
                "UserName": {
                    "Ref": "myuser"
                },
                "Status": "Active"
            }
        }
    },
    "Outputs": {
        "AccessKeyformyaccesskey": {
            "Value": {
                "Ref": "myaccesskey"
            }
        },
        "SecretKeyformyaccesskey": {
            "Value": {
                "Fn::GetAtt": [
                    "myaccesskey",
                    "SecretAccessKey"
                ]
            }
        }
    }
}
